<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RongChen</string>
    <string name="action_settings">Settings</string>
    <string name="home_page">首页</string>
    <string name="recommend">推荐</string>
    <string name="learn_drive">学车</string>
    <string name="trainer">教练</string>
    <string name="my_home">我的</string>
    <string name="password_hint">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="phone_hint">手机号</string>
    <string name="register_phone_hint">手机号码</string>
    <string name="register_code">获取验证码</string>
    <string name="register_code_hint">验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="login_now">立即登陆</string>
    <string name="tv_search">搜索</string>
    <string name="register_sregetcode">秒后重发</string>
    <string name="register_regetcode">重新发送</string>
    <string name="recommend_content_one">成功推荐手机号为</string>
    <string name="recommend_content_two">的用户，在用户成功报名后，您将获得200元的推荐奖金。推荐记录在我的账户里查看处理的进度</string>
    <string name="tv_search_cancel">取消</string>

</resources>