<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_login_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:layout_marginLeft="@dimen/login_margin_space"
            android:layout_marginRight="@dimen/login_margin_space"
            android:layout_marginTop="40dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_input_height"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="12dp"
                android:hint="@string/phone_hint"
                android:textColor="#ffffff"
                android:textColorHint="#999999"
                android:textSize="@dimen/text_login" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/login_margin_space"
            android:layout_marginRight="@dimen/login_margin_space"
            android:background="#d5d5d5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:layout_marginLeft="@dimen/login_margin_space"
            android:layout_marginRight="@dimen/login_margin_space"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_input_height"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/code"
                android:drawablePadding="12dp"
                android:hint="@string/password_hint"
                android:password="true"
                android:textColor="#ffffff"
                android:textColorHint="@color/text_color_hint"
                android:textSize="@dimen/text_login" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/login_margin_space"
            android:layout_marginRight="@dimen/login_margin_space"
            android:background="#d5d5d5" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/submit_selector_shape_login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/forget_password"
                android:textColor="@color/font_white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/register_now"
                android:textColor="@color/font_white"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>